# OpenRA-RL-Util

./: pyproject.toml
.github/workflows/: pypi-publish.yml  test.yml
openra_rl_util/: __init__.py  damage_matrix.py  reward_vector.py  rubric_base.py  rubrics.py
scripts/: generate_damage_matrix.py
tests/: conftest.py  test_damage_matrix.py  test_reward_vector.py  test_rubrics.py
